scripts/iptables.rules
# Generated by iptables-save v1.6.0 on Mon Nov 20 13:21:31 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:sshguard - [0:0]
-A INPUT -d 172.16.0.0/16 -j ACCEPT
-A INPUT -d 192.168.255.0/24 -j ACCEPT
-A INPUT -d 10.0.0.0/8 -j ACCEPT
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -j sshguard
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 993 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22345 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -d 172.16.0.0/16 -j ACCEPT
-A FORWARD -d 192.168.255.0/24 -j ACCEPT
-A FORWARD -d 10.0.0.0/8 -j ACCEPT
-A FORWARD -p ipv6-icmp -j ACCEPT
-A OUTPUT -d 172.16.0.0/16 -j ACCEPT
-A OUTPUT -d 192.168.255.0/24 -j ACCEPT
-A OUTPUT -d 10.0.0.0/8 -j ACCEPT
-A OUTPUT -p ipv6-icmp -j ACCEPT
COMMIT
# Completed on Mon Nov 20 13:21:31 2017
